--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,12 @@ body {
   background-color: #121212;
 }
 
+#particles-js {
+  width: 100%;
+  height: 100vh;
+  background-color: #121212;
+}
+
 .container {
   display: flex;
   flex-direction: column;
