--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,12 @@ body {
 }
 
 #particles-js {
+  position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  z-index: 0;
+  top: 0;
+  left: 0;
   background-color: #121212;
 }
 
@@ -21,6 +25,7 @@ body {
   align-items: center;
   width: 100%;
   text-align: center;
+  z-index: 1;
 }
 
 .typing-effect-container {
