--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,13 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  cursor: default;
 }
 
 .typing-effect {
